--- a/index.html
+++ b/index.html
@@ -3,123 +3,126 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0" />
-<style type="text/css">body{ line-height:120%;margin:20px 20px 20px 20px;background-color:#ECECEC;text-align:center;}</style>
+<style type="text/css">body{ line-height:120%;margin:20px 20px 20px 20px;background-color:#ECECEC;text-align: center;}</style>
 </head>
 	<!--这个页面的源代码是随意写的，各个方面都做得不是很完美，不代表个人水平。 -->
 	<title>Tony Xue's Home page</title>
 	<body>
-		<p align="right"><a href=index_en.html>English</a></p>
+		<p align="right"><a href="index.html">中文</a></p>
 		
-		<br><br>
+		<br><br> 
 		<b><i><font style="font-size:45px;">薛兆鑫 Tony Xue</font></i></b><br><br><br>
-		<img src=img/me.jpg>
+		<img src="img/me.jpg">
 		<br><br><br>
-		<b><i>目前就读于中国人民大学附属中学
+		<b><i>I am currently a student at RDFZ
 			<br>
-			学习各类计算机知识已多年，对计算机拥有浓厚兴趣。</b>
+			I have been learning and have a great interest on computer related subjects.</b>
 			<br><br><br>
-		<font size="4">我目前正在跟随我的老师<a href="http://web.media.mit.edu/~d_wu/">武迪(Di Wu)</a>学习计算摄像学相关领域的内容。</font>
+		<font size="4">I am studying Computational Photography related with my teacher <a href="http://web.media.mit.edu/~d_wu/">武迪(Di Wu)</a></font>
 		<br><br>
-		<font size="4">这是和我一起学习的另一位同学<a href="http://g.jamesliu.info/about.htm">刘嘉南(James Liu)</a>。<br>(他有一个华丽的个人介绍页面，因为他是做前端的，我是做Linux的 :P)</font>
+		<font size="4">This is my classmate <a href="http://g.jamesliu.info/about.htm">刘嘉南(James Liu)</a> <br> (He has a better page than mine because he's a front end programmer but I'm a Linux person. :P)</font>
 		<br><br><br>
-			<i>联系方式：</i>
+			<i>Contact：</i>
 		E-mail: xuezhaoxin _at_ rdfz.cn (GPG:0x80F92322)
 		<br>
 		        xuezxbb _at_ gmail.com (GPG:0x93A7D83F)
 		<br><br> 
 		Jabber: toanii _at_ nihaojabber.cn &amp; trezzo _at_ nihaojabber.net
-			</i></b>
-			<br><br>
-			IRC: 我经常使用昵称<b>ToaNii</b>在<b>Freenode</b>的<b>#linux-libre</b>(英文)和<b>#ubuntu-cn</b>(中文)频道中，也可以在那里找到我。
-			<br><br>
-			我是自由软件基金会（Free Software Foundation, FSF）的一名会员。欢迎其他同样支持自由软件的人加入！
+		<br><br>
+		IRC: You can also find me as <b>ToaNii</b> in <b>#linux-libre</b>(English) and <b>#ubuntu-cn</b>(Chinese) on <b>Freenode</b>.
+			</i><br><br>
+			I am an associate member of FSF (Free Software Foundation) and I hope more people that share the same interest can join the foundation!
 			<br><br>
 			<a href="http://www.fsf.org/register_form?referrer=12714"><img src="http://static.fsf.org/nosvn/associate/fsf-12714.png" alt="[FSF Associate Member]" /></a>
 			<br><br>
 		<hr>
 		<br><br>
 		
-		<font style="font-size:40px;"><b>教育经历：</b></font>
+		<font style="font-size:40px;"><b>Education：</b></font>
 		<br><br>
-		2012-2015年 中国人民大学附属中学 ICC国际课程中心
+		2012-2015 International Curriculum Centre, The High School Affiliated to Renmin Univ. of China
 	<br><br>
-		2009-2012年 中国人民大学附属中学 初中
+		2009-2012 Junior High School, The High School Affiliated to Renmin Univ. of China
 		
 <br><br>
 		<hr>
 		<br><br><br><br>
-		<font style="font-size:40px;"><b>正在进行中的项目：</b></font>
+		<font style="font-size:40px;"><b>My projects ongoing：</b></font>
 		<br>
 		<br>
 		<br>
-			<font style="font-size:20px;">1.<a href=tor.html>Tor网络节点</a></font>
+			<font style="font-size:20px;">1.<!--a href=tor.html-->Tor node</a></font>
 		<br><br>
 		<img src=img/Tor-logo.png>
 		<br><br>
-		Tor，全称The Onion Router，是一个由美国国防部与麻省理工学院发起的互联网在线匿名项目，<br>利用多个中继节点转发数据，将原始用户的身份隐藏，为社会各类人士在互联网上提供匿名保障。
+		Tor is a research project, funded by the National Science Foundation and previously DARPA (among others). <br>Its primary goal is to provide people from hostile environments with encrypted and uncensored access to the Internet.
 		
 		<br>
 		<br>
 		<br>
-		<font style="font-size:20px;">2.<a href=fasterapple.html>FasterApple</a></font>
+		<font style="font-size:20px;">2.<!--a href=fasterapple.html-->FasterApple</a></font>
 		<br><br>
-		一个可以让苹果App Store下载与访问加速的免费公共DNS服务
+		A public DNS that accelerate the speed of App Store in China.
 		<br><br><br>
-		<font style="font-size:40px;"><b>计划中的项目:</b></font>
+
+		<font style="font-size:40px;"><b>Planned projects:</b></font>
 		<br>
 		<br>
 		<br>
 		<font style="font-size:20px;">1.TorAsiaPacific</font>
 		<br><br>
-		同样是由加入Tor这个项目而得到的启发。<br>在欧洲及美国有很多提倡保护隐私的组织都在投入大量精力运行众多大流量的Tor节点，但是整个Tor匿名网络在亚洲的节点却很少。
+		Inspired by Tor.<br> Many organizations in America and Europe are paying their effort to run giant Tor nodes but there are few in Asia.
 		<br>
-		从某种角度来说，没有完全利用全球各地的地理位置优势，大量节点都集中在欧美会导致整个网络更容易被探测、破解，<br>所以我希望在线成立一个基于亚洲的组织，在亚洲各国建立众多节点，以最大化增加整个Tor网络匿名性。
+		Tor has not taken the advantage of the whole globe, so I hope to extend the Tor network in Asia to improve the anonymity of the Tor users.
 		
 		<br><br>
 		<hr>
 		<br><br>
 		
-		<font style="font-size:40px;"><b>计算机学习经历：</b></font>
+		<font style="font-size:40px;"><b>Computer related experience：</b></font>
 		<br>
 		<br>
 		<br>
 		<img src=img/blender-logo.png>
-		<font style="font-size:20px;">Blender 3D软件使用学习</font>
+		<font style="font-size:20px;">Blender 3D</font>
 		<br>
 		<img src=img/vegaspro-logo.png>
-		<font style="font-size:20px;">Sony Vegas Pro 使用经历</font>
+		<font style="font-size:20px;">Sony Vegas Pro</font>
 		<br>
 		
 		<img src=img/linux-logo.png>
-		<font style="font-size:20px;">多于三年的Linxu操作系统维护学习、两年以上Linxu服务器维护经历</font>
+		<font style="font-size:20px;">More than three years of Linux system and server maintaining experience </font>
 		<br>
 		<img src=img/windows-logo.png>
-		<font style="font-size:20px;">多于三年的Windows操作系统维护学习、一年Windows服务器维护经历</font>
+		<font style="font-size:20px;">More than three years of Windows server maintaining experience</font>
 		<br><br>
-		<font style="font-size:20px;">半年网络拥塞及DDOS学习</font>
+		<font style="font-size:20px;">Six months of DDOS learning</font>
 		<br><br>
-		<font style="font-size:20px;">多于三年的网络路由与DNS相关学习</font>
+		<font style="font-size:20px;">More than three years of DNS related researches</font>
 		<br><br>
-		<font style="font-size:20px;">两年C++学习</font>
+		<font style="font-size:20px;">Two years of C++ experience</font>
 		<br><br>
-		<font style="font-size:20px;">一年基础编程算法学习</font>
+		<font style="font-size:20px;">One year of basic algorithm study</font>
 		<br><br>
-		<font style="font-size:20px;">半年苹果系统Objective-C语言编程学习</font>
+		<font style="font-size:20px;">Six months of Objective-C study</font>
 		<br>
 		<br>
-		<hr>
+				<hr>
 		<br><br>
-		<font style="font-size:40px;"><b>其他经历</b></font>
+		<font style="font-size:40px;"><b>Other Experience</b></font>
 		<br><br>
-		曾经混迹于域名行业，注册了几个有价值的域名，迄今仍有买家以及某跨国公司律师的邮件上门
+		Registered and inversted a few valuable domains
 		<br><br>
-		正在自学语言心理学，目前在阅读各类相关书目及文章
+		Currently learning linguistic psychology related subjects
 		<br><br>
-		目前正在阅读一些有关著作权与创意方面的书籍
+		Doing researches on copyright and creativity
 		<br><hr>
 		<br><br><br>
-		<font style="font-size:20px;">链接：</font><br><br>
-		<a href="http://insyde.me" >我的中文博客</a>
+		<font style="font-size:20px;">Links:</font><br><br><br>
+		<a href="http://insyde.me" >My blog(in Chinese)</a>
+		
+
+		
 		<br><br><br>
 		<p align="center">2014  Handmade in Beijing</p>
 		<p align="center">No copyright, No license.</p>
