fix the link to Chinese page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!--这个页面的源代码是随意写的，各个方面都做得不是很完美，不代表个人水平。 -->
 	<title>Tony Xue's Home page</title>
 	<body>
-		<p align="right"><a href="index.html">中文</a></p>
+		<p align="right"><a href="index_cn.html">中文</a></p>
 		
 		<br><br> 
 		<b><i><font style="font-size:45px;">薛兆鑫 Tony Xue</font></i></b><br><br><br>
