--- a/fasterapple.html
+++ b/fasterapple.html
@@ -1,10 +1,10 @@
-	<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+ï»¿	<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-CN" dir="ltr">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style type="text/css">body{ line-height:120%;background-color:#ECECEC} </style>
 </head>
-	<!--Õâ¸öÒ³ÃæµÄÔ´´úÂëÊÇËæÒâÐ´µÄ£¬¸÷¸ö·½Ãæ¶¼×öµÃ²»ÊÇºÜÍêÃÀ£¬²»´ú±í¸öÈËË®Æ½¡£ -->
+	<!--è¿™ä¸ªé¡µé¢çš„æºä»£ç æ˜¯éšæ„å†™çš„ï¼Œå„ä¸ªæ–¹é¢éƒ½åšå¾—ä¸æ˜¯å¾ˆå®Œç¾Žï¼Œä¸ä»£è¡¨ä¸ªäººæ°´å¹³ã€‚ -->
 	<title>Tony Xue's Home page</title>
 <body align="center">
 	<br>
@@ -12,23 +12,23 @@
 
 <font style="font-size:20px;">	
 	<br><br><br>
-		<b>ÏîÄ¿Ö÷Ò³£º</b><a href="http://fasterapple.com">fasterapple.com</a>
+		<b>é¡¹ç›®ä¸»é¡µï¼š</b><a href="http://fasterapple.com">fasterapple.com</a>
 		<br><br>
-		<b>ÏîÄ¿Î¢²©£º</b><a href="http://weibo.com/fasterapple">FasterApple@Sina</a>
+		<b>é¡¹ç›®å¾®åšï¼š</b><a href="http://weibo.com/fasterapple">FasterApple@Sina</a>
 		<br><br><br>
-		 Ò»¸öÓÃÓÚ¼ÓËÙÆ»¹ûÈí¼þÉÌµê£¨App Store& Mac App Store£©¹«ÓÃÃâ·ÑDNS·þÎñ¡£
+		 ä¸€ä¸ªç”¨äºŽåŠ é€Ÿè‹¹æžœè½¯ä»¶å•†åº—ï¼ˆApp Store& Mac App Storeï¼‰å…¬ç”¨å…è´¹DNSæœåŠ¡ã€‚
 		 <br><br>
-		 Í¬Ê±»¹¿É·ÀÖ¹µçÐÅÔËÓªÉÌ¶ÔÓÚÆäDNS·þÎñÆ÷½øÐÐµÄ¶ñÒâ´Û¸ÄÓëÎÛÈ¾£¬
+		 åŒæ—¶è¿˜å¯é˜²æ­¢ç”µä¿¡è¿è¥å•†å¯¹äºŽå…¶DNSæœåŠ¡å™¨è¿›è¡Œçš„æ¶æ„ç¯¡æ”¹ä¸Žæ±¡æŸ“ï¼Œ
 		 <br><br>
-		 ²¢ÇÒ°ïÖúÓÃ»§»ñ¸ü×¼È·µÄÍøÕ¾IPµØÖ·£¬µÃµ½¸ü¿ìµÄä¯ÀÀËÙ¶È¡£
+		 å¹¶ä¸”å¸®åŠ©ç”¨æˆ·èŽ·æ›´å‡†ç¡®çš„ç½‘ç«™IPåœ°å€ï¼Œå¾—åˆ°æ›´å¿«çš„æµè§ˆé€Ÿåº¦ã€‚
 		<br><br>
-		ÓÃ»§ÊýÁ¿£ºÔ¼1500¶ÀÁ¢ÓÃ»§
+		ç”¨æˆ·æ•°é‡ï¼šçº¦1500ç‹¬ç«‹ç”¨æˆ· 
 		<br><br>
-		Ö÷DNS·þÎñÆ÷Ã¿ÃëÇëÇóÊýÁ¿£º20-30¸ö
+		ä¸»DNSæœåŠ¡å™¨æ¯ç§’è¯·æ±‚æ•°é‡ï¼š20-30ä¸ª 
 		<br><br>
-		Ö÷DNS·þÎñÆ÷Ã¿ÃëDNSÇëÇóÀ´Ô´¶ÀÁ¢IP¸öÊý:3-4¸ö
+		ä¸»DNSæœåŠ¡å™¨æ¯ç§’DNSè¯·æ±‚æ¥æºç‹¬ç«‹IPä¸ªæ•°:3-4ä¸ª 
 		<br><br>
-		DNS·þÎñÆ÷Á÷Á¿½ØÍ¼£º£¨Ã¿¸öDNSÇëÇó°üµÄ´óÐ¡Îª512×Ö½Ú£©
+		DNSæœåŠ¡å™¨æµé‡æˆªå›¾ï¼šï¼ˆæ¯ä¸ªDNSè¯·æ±‚åŒ…çš„å¤§å°ä¸º512å­—èŠ‚ï¼‰
 		<br><br>
 		<img src=img/fasterapple-dns.png>
 		
