Added my WeChat contact

--- a/index_cn.html
+++ b/index_cn.html
@@ -22,7 +22,10 @@
 		<br><br>
 		<font size="4">这是和我一起学习的另一位同学<a href="http://g.jamesliu.info/about.htm">刘嘉南(James Liu)</a>。<br>(他有一个华丽的个人介绍页面，因为他是做前端的，我是做Linux的 :P)</font>
 		<br><br><br>
-			<i>联系方式：</i>
+			<i><strong>联系方式：</strong></i>
+			<br><br>
+			微信： <a href="./sitsiukam-wechat.jpg"></a><strong>sitsiukam</strong></a>(<-- 点击查看我的微信二维码)
+			<br><br>
 		E-mail: xuezhaoxin _at_ rdfz.cn (GPG:0x80F92322)
 		<br>
 		        xuezxbb _at_ gmail.com (GPG:0x93A7D83F)
