--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 		<br><br>
 		<font size="4">This is my classmate <a href="http://g.jamesliu.info/about.htm">刘嘉南(James Liu)</a> <br> (He has a better page than mine because he's a front end programmer but I'm a Linux person. :P)</font>
 		<br><br><br>
-			<i>Contact：</i>
+			<i><strong>Contact：</strong></i>
+			<br><br>
+			The easiest way to reach me is through <a href="http://wechat.com">WeChat</a>. 
+			<br>
+			My WeChat ID is <a href="./sitsiukam-wechat.jpg"></a><strong>sitsiukam</strong></a>(<-- Click to get my WeChat QR Code).
+			<br><br>
 		E-mail: xuezhaoxin _at_ rdfz.cn (GPG:0x80F92322)
 		<br>
 		        xuezxbb _at_ gmail.com (GPG:0x93A7D83F)
