Fixed QR code hyperlink

--- a/index_cn.html
+++ b/index_cn.html
@@ -24,7 +24,7 @@
 		<br><br><br>
 			<i><strong>联系方式：</strong></i>
 			<br><br>
-			微信： <a href="./sitsiukam-wechat.jpg"><strong>sitsiukam</strong></a>(<-- 点击查看我的微信二维码)
+			微信： <a href="./img/sitsiukam-wechat.jpg"><strong>sitsiukam</strong></a>(<-- 点击查看我的微信二维码)
 			<br><br>
 		E-mail: xuezhaoxin _at_ rdfz.cn (GPG:0x80F92322)
 		<br>
