--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<br><br>
 			The easiest way to reach me is through <a href="http://wechat.com">WeChat</a>. 
 			<br>
-			My WeChat ID is <a href="./sitsiukam-wechat.jpg"><strong>sitsiukam</strong></a>(<-- Click to get my WeChat QR Code).
+			My WeChat ID is <a href="./img/sitsiukam-wechat.jpg"><strong>sitsiukam</strong></a>(<-- Click to get my WeChat QR Code).
 			<br><br>
 		E-mail: xuezhaoxin _at_ rdfz.cn (GPG:0x80F92322)
 		<br>
