Update my webpage

--- a/index.html
+++ b/index.html
@@ -14,32 +14,22 @@
 		<b><i><font style="font-size:45px;">薛兆鑫 Tony Xue</font></i></b><br><br><br>
 		<img src="img/me.jpg">
 		<br><br><br>
-		<b><i>I am currently a student at RDFZ
-			<br>
-			I have been learning and have a great interest on computer related subjects.</b>
-			<br><br><br>
-		<font size="4">I am studying Computational Photography related with my teacher <a href="http://web.media.mit.edu/~d_wu/">武迪(Di Wu)</a></font>
-		<br><br>
-		<font size="4">This is my classmate <a href="http://g.jamesliu.info/about.htm">刘嘉南(James Liu)</a> <br> (He has a better page than mine because he's a front end programmer but I'm a Linux person. :P)</font>
+                <b><i>I just graduated from The High School Affiliated to Renmin University of China (aka. RDFZ)</i></b>
+                <br>
+                <b><i>I will be a freshman at University of California, Davis in September 2015</i></b>
 		<br><br><br>
 			<i><strong>Contact：</strong></i>
 			<br><br>
 			The easiest way to reach me is through <a href="http://wechat.com">WeChat</a>. 
 			<br>
-			My WeChat ID is <a href="./img/sitsiukam-wechat.jpg"><strong>sitsiukam</strong></a>(<-- Click to get my WeChat QR Code).
+			My WeChat ID is <strong>sitsiuyam</strong>.
 			<br><br>
-		E-mail: xuezhaoxin _at_ rdfz.cn (GPG:0x80F92322)
-		<br>
-		        xuezxbb _at_ gmail.com (GPG:0x93A7D83F)
+		E-mail: tonyxue _at_ tonyxue _dot_ asia
 		<br><br> 
-		Jabber: toanii _at_ nihaojabber.cn &amp; trezzo _at_ nihaojabber.net
+                You can also send me encrypted email to xue _at _lavaboom.com <a href="./xue@lavaboom.com.asc"> (Click for my public key) </a>
 		<br><br>
 		IRC: You can also find me as <b>ToaNii</b> in <b>#linux-libre</b>(English) and <b>#ubuntu-cn</b>(Chinese) on <b>Freenode</b>.
 			</i><br><br>
-			I am an associate member of FSF (Free Software Foundation) and I hope more people that share the same interest can join the foundation!
-			<br><br>
-			<a href="http://www.fsf.org/register_form?referrer=12714"><img src="http://static.fsf.org/nosvn/associate/fsf-12714.png" alt="[FSF Associate Member]" /></a>
-			<br><br>
 		<hr>
 		<br><br>
 		
@@ -51,39 +41,7 @@
 		
 <br><br>
 		<hr>
-		<br><br><br><br>
-		<font style="font-size:40px;"><b>My projects ongoing：</b></font>
-		<br>
-		<br>
-		<br>
-			<font style="font-size:20px;">1.<!--a href=tor.html-->Tor node</a></font>
 		<br><br>
-		<img src=img/Tor-logo.png>
-		<br><br>
-		Tor is a research project, funded by the National Science Foundation and previously DARPA (among others). <br>Its primary goal is to provide people from hostile environments with encrypted and uncensored access to the Internet.
-		
-		<br>
-		<br>
-		<br>
-		<font style="font-size:20px;">2.<!--a href=fasterapple.html-->FasterApple</a></font>
-		<br><br>
-		A public DNS that accelerate the speed of App Store in China.
-		<br><br><br>
-
-		<font style="font-size:40px;"><b>Planned projects:</b></font>
-		<br>
-		<br>
-		<br>
-		<font style="font-size:20px;">1.TorAsiaPacific</font>
-		<br><br>
-		Inspired by Tor.<br> Many organizations in America and Europe are paying their effort to run giant Tor nodes but there are few in Asia.
-		<br>
-		Tor has not taken the advantage of the whole globe, so I hope to extend the Tor network in Asia to improve the anonymity of the Tor users.
-		
-		<br><br>
-		<hr>
-		<br><br>
-		
 		<font style="font-size:40px;"><b>Computer related experience：</b></font>
 		<br>
 		<br>
@@ -94,7 +52,6 @@
 		<img src=img/vegaspro-logo.png>
 		<font style="font-size:20px;">Sony Vegas Pro</font>
 		<br>
-		
 		<img src=img/linux-logo.png>
 		<font style="font-size:20px;">More than three years of Linux system and server maintaining experience </font>
 		<br>
@@ -110,9 +67,8 @@
 		<font style="font-size:20px;">One year of basic algorithm study</font>
 		<br><br>
 		<font style="font-size:20px;">Six months of Objective-C study</font>
-		<br>
-		<br>
-				<hr>
+		<br><br>
+		<hr>
 		<br><br>
 		<font style="font-size:40px;"><b>Other Experience</b></font>
 		<br><br>
@@ -124,12 +80,12 @@
 		<br><hr>
 		<br><br><br>
 		<font style="font-size:20px;">Links:</font><br><br><br>
-		<a href="http://insyde.me" >My blog(in Chinese)</a>
-		
-
+	        My mate <a href="http://jamesliu.info">James Liu</a>. He's generally a genius on computers and he's now a CTO at a startup.	
+                <br><br>
+                <a href="http://github.com/tonyxue">My GitHub</a>
 		
 		<br><br><br>
-		<p align="center">2014  Handmade in Beijing</p>
+		<p align="center">2015  Handmade in Beijing</p>
 		<p align="center">No copyright, No license.</p>
 	<script type="text/javascript" src="home.js" charset="utf-8"></script>
 	<div style="display:none;"><script src="http://s22.cnzz.com/stat.php?id=5874201&web_id=5874201" language="JavaScript"></script></div>
