--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <br><br>
 		<hr>
 		<br><br>
-		<font style="font-size:40px;"><b>Computer related experience：</b></font>
+		<font style="font-size:40px;"><b>Computer related skills：</b></font>
 		<br>
 		<br>
 		<br>
@@ -50,30 +50,22 @@
 		<font style="font-size:20px;">Sony Vegas Pro</font>
 		<br>
 		<img src=img/linux-logo.png>
-		<font style="font-size:20px;">More than three years of Linux system and server maintaining experience </font>
+		<font style="font-size:20px;">Linux system and bash programming </font>
 		<br>
 		<img src=img/windows-logo.png>
-		<font style="font-size:20px;">More than three years of Windows server maintaining experience</font>
+		<font style="font-size:20px;">Windows server administration</font>
 		<br><br>
-		<font style="font-size:20px;">Six months of DDOS learning</font>
+		<font style="font-size:20px;">DNS system strategies</font>
 		<br><br>
-		<font style="font-size:20px;">More than three years of DNS related researches</font>
-		<br><br>
-		<font style="font-size:20px;">Two years of C++ experience</font>
-		<br><br>
-		<font style="font-size:20px;">One year of basic algorithm study</font>
-		<br><br>
-		<font style="font-size:20px;">Six months of Objective-C study</font>
+		<font style="font-size:20px;">C++ Programming</font>
 		<br><br>
 		<hr>
 		<br><br>
 		<font style="font-size:40px;"><b>Other Experience</b></font>
 		<br><br>
-		Registered and inversted a few valuable domains
+		Domain investments
 		<br><br>
-		Currently learning linguistic psychology related subjects
-		<br><br>
-		Doing researches on copyright and creativity
+		Copyright research
 		<br><hr>
 		<br><br><br>
 		<font style="font-size:20px;">Links:</font><br><br><br>
