--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<br>
 			My WeChat ID is <strong>sitsiuyam</strong>.
 			<br><br>
-		E-mail: tonyxue _at_ tonyxue _dot_ asia
+		E-mail: xue _at_ e-mail.fj.cn
 		<br><br> 
 		IRC: You can also find me as <b>ToaNii</b> in <b>#linux-libre</b>(English) and <b>#ubuntu-cn</b>(Chinese) on <b>Freenode</b>.
 			</i><br><br>
